- Improved pramp's FindTheDuplicate and WordCountEngine;